2006-03-29  Sergey Udaltsov <svu@gnome.org>

	* gswitchit-applet.c: add help to the layout view

2006-03-29 Joachim Noreiko <jnoreiko@yahoo.com>

	* help/C/gswitchit.xml: added new section on Layout View

2006-03-26  Sergey Udaltsov <svu@gnome.org>

	* Makefile.am: make applet export dynamic symbols,
	so plugins would work. Thanks to Sebastien Bacher for help.

2006-03-21  Sergey Udaltsov <svu@gnome.org>

	* gswitchit-applet.c: bad crash on exit fixed
	(confirmed by Ondrej Novy), closed #328002
	
2006-01-21  Vincent Untz  <vuntz@gnome.org>

	* help/fr/fr.po: small update

2006-01-11  Sergey Udaltsov <svu@gnome.org>

	* GNOME_KeyboardApplet.server.in.in: removed "GNOME ", 
	HIG violation fixed, closed #326549

2006-01-06  Vincent Untz  <vuntz@gnome.org>

	* help/fr/fr.po: small update, by Christophe Bliard
	<christophe.bliard@trux.info>

2005-12-06  Sergey Udaltsov <svu@gnome.org>

	* gswitchit-applet.c: update for plugins

2005-12-03  Vincent Untz  <vuntz@gnome.org>

	* help/fr/*: small update, by Christophe Bliard
	<christophe.bliard@trux.info>
	* help/*: give some .cvsignore love

2005-10-06  Vincent Untz  <vuntz@gnome.org>

	* help/fr/fr.po: small update.

2005-09-11  Sergey Udaltsov <svu@gnome.org>

	* gswitchit-applet.c: small polish, improvement for plugins

2005-08-30  Ryan Lortie  <desrt@desrt.ca>

	* Makefile.am: repair gnome_keyboard_applet_LDADD entry for
	  libgswitchit-applet.a so that it is able to properly depend on
	  it being made during multi-threaded builds.  Closes bug #314814.

2005-08-27  Vincent Untz  <vuntz@gnome.org>

	* help/fr/fr.po: forgot some headers

2005-08-27  Vincent Untz  <vuntz@gnome.org>

	* help/Makefile.am:
	* help/fr/*: add french translation of docs, by Christophe Bliard
	<cbliard@gmail.com>

2005-07-26  Sergey Udaltsov <svu@gnome.org>

	* gswitchit.glade,
	gswitchit-properties.glade,
	GNOME_GSwitchItApplet.xml,
	Makefile.am: removing unnecessary slack, adding preview window

2005-07-23  Sergey Udaltsov <svu@gnome.org>
