@@ -109,14 +109,14 @@ Template last modified Feb 12, 2002
   right-click on the panel, then choose <guimenuitem>Add to
   Panel</guimenuitem>.  Select <application>&applet;</application>
   in the <application>Add to the panel</application> dialog, then
-  click <guibutton>OK</guibutton>.</para>
+  click <guibutton>OK</guibutton>. For more on this, see <ulink type="help" url="ghelp:user-guide?panels-addobject">Adding an Object to a Panel</ulink>.</para>
 
   <para>To open the <guilabel>Keyboard Preferences</guilabel> dialog, choose
   <guimenuitem>Open Keyboard Preferences</guimenuitem> in the applet popup
   menu. You may need to go to this dialog to be able to configure the keyboard
-  (choose model, layouts, options, etc.). To view the help for
+  (choose model, layouts, options, etc.). For help with setting
   <guilabel>Keyboard Preferences</guilabel>, see
-  <ulink url="ghelp:user-guide#goscustperiph-2">Configuring Keyboard
+  <ulink url="ghelp:user-guide?prefs-keyboard">Configuring Keyboard
   Preferences</ulink>.</para>
 </sect1>
 
@@ -144,13 +144,12 @@ Template last modified Feb 12, 2002
     </varlistentry>
     <varlistentry>
       <term>Keyboard</term>
-      <listitem><para>In <guilabel>Keyboard Preferences</guilabel>, you can set
-      which key that you would like to use to switch groups on your keyboard.
-      To bring up the <guilabel>Keyboard Preferences</guilabel> dialog, choose
+      <listitem><para>In the <application>Keyboard Preferences</application> 
+      preference tool, you can set
+      which key that you would like to use to switch groups on your keyboard.</para>
+      <para>To bring up the <guilabel>Keyboard Preferences</guilabel> dialog, choose
       <guimenuitem>Open Keyboard Preferences</guimenuitem> in the applet popup
-      menu.  For more information about <guilabel>Keyboard Preferences</guilabel>,
-      see <ulink url="ghelp:user-guide#goscustperiph-2">Configuring Keyboard
-      Preferences</ulink>.</para></listitem>
+      menu. Choose the key you want to use in the <ulink url="ghelp:user-guide#prefs-keyboard-layoutoptions"><guilabel>Layout Options</guilabel></ulink> tab, under <guilabel>Group Shift/Lock behavior</guilabel>.</para></listitem>
     </varlistentry>
   </variablelist>
 </sect1>
