@@ -1,3 +1,8 @@
+2006-04-01 Joachim Noreiko <jnoreiko@yahoo.com>
+
+	* help/C/gswitchit.xml: updated info on keyboard shortcut
+	for switching group, updated ids in links to User Guide, closes #335940
+
 2006-03-29  Sergey Udaltsov <svu@gnome.org>
 
 	* gswitchit-applet.c: add help to the layout view
